# gravitybee

./: .bumpversion.cfg  .gitignore  .mergify.yml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.md  LICENSE  MANIFEST.in  Pipfile  README.rst  appveyor.yml  azure-pipelines.yml  cleanup.bat  cleanup.sh  gravitybee.file  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: release.yml
gravitybee/: Arguments.py  PackageGenerator.py  __init__.py  cli.py  distutils_utils.py  generate-standalone.py  hook-template  hook-template.py  hook-watchmaker.py  logging.conf
gravitybee/tests/: test.cfg
requirements/: ci.txt  install.txt  lint.txt  pip.txt  pytest.txt  release.txt  test.txt
tests/: test_gravitybee.py
tests/gbtestapp/: CHANGELOG.rst  README.rst  correct_hook.txt  correct_hook_windows.txt  correct_hook_with_extras.txt  correct_hook_with_extras_windows.txt  correct_stdout.txt  setup.cfg  setup.py
tests/gbtestapp/src/gbtestapp/: cli.py
tests/gbtestapp/src/gbtestapp/gbextradata/: __init__.py  data_file.txt
tests/testapp2/: correct_stdout.txt  setup.cfg  setup.py
tests/testapp2/src/gbextradata2/: __init__.py  data_file.txt
tests/testapp2/src/gbtest2/: cli.py
