# pyup: ignore file

[metadata]
version = 4.2.6
author = Maintainers
author_email = projects@plus3it.com
long_description = file: README.rst, CHANGELOG.rst
url = https://github.com/YakDriver/gravitybee
license = Apache Software License 2.0
platforms =
    Linux
    Windows
    Darwin
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Utilities

[options]
install_requires =
    backoff
    click
    defusedxml;platform_system=="Windows"
    futures;python_version<"3"
    six;platform_system=="Linux" and python_version>"3.3"
    pypiwin32;platform_system=="Windows"
    wheel<=0.29.0;python_version<"2.7"
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    gbtestapp = gbtestapp.cli:main

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

[flake8]
exclude =
    .tox,
    .git,
    __pycache__,
    .eggs,
    *.egg,
    build,
    dist,
    htmlcov,
    */static/salt/formulas/*
ignore = FI15,FI16,FI17,FI5,D107

[tool:pytest]
norecursedirs =
    .git
    .tox
    .env
    __pycache__
    dist
    build
    htmlcov
collect_ignore =
    hook-*.py
python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -rxEfsw
    --strict
    --doctest-modules
    --doctest-glob=\*.md
    --tb=short
